src/test/resources/purescript_examples/passing/ArrayType.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ClassName)
          PsiElement(proper name)('Pointed')
          PsiElement(whitespace)(' ')
        PsiElement(identifier)('p')
        PsiElement(whitespace)(' ')
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PureASTWrapperElement(TypeDeclaration)
          PsiElement(identifier)('point')
          PsiElement(whitespace)(' ')
          PsiElement(::)('::')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Type)
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(ForAll)
                PsiElement(forall)('forall')
                PsiElement(whitespace)(' ')
                PsiElement(identifier)('a')
                PsiElement(.)('.')
                PsiElement(whitespace)(' ')
                PureASTWrapperElement(ConstrainedType)
                  PureASTWrapperElement(Type)
                    PureASTWrapperElement(TypeAtom)
                      PureASTWrapperElement(TypeVar)
                        PsiElement(identifier)('a')
                        PsiElement(whitespace)(' ')
                    PsiElement(->)('->')
                    PsiElement(whitespace)(' ')
                    PureASTWrapperElement(Type)
                      PureASTWrapperElement(TypeAtom)
                        PureASTWrapperElement(TypeVar)
                          PsiElement(identifier)('p')
                          PsiElement(whitespace)(' ')
                      PureASTWrapperElement(TypeAtom)
                        PureASTWrapperElement(TypeVar)
                          PsiElement(identifier)('a')
                          PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeInstanceDeclaration)
        PsiElement(instance)('instance')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('pointedArray')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ClassName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('Pointed')
            PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PsiElement([)('[')
          PsiElement(])(']')
          PsiElement(whitespace)(' ')
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PureASTWrapperElement(ValueDeclaration)
          PsiElement(identifier)('point')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Binder)
            PureASTWrapperElement(VarBinder)
              PsiElement(identifier)('a')
              PsiElement(whitespace)(' ')
          PsiElement(=)('=')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Value)
            PureASTWrapperElement(PrefixValue)
              PureASTWrapperElement(ArrayLiteral)
                PsiElement([)('[')
                PureASTWrapperElement(Value)
                  PureASTWrapperElement(PrefixValue)
                    PureASTWrapperElement(Var)
                      PureASTWrapperElement(Qualified)
                        PsiElement(identifier)('a')
                PsiElement(])(']')
                PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
