src/test/resources/purescript_examples/failing/TypeSynonyms2.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ClassName)
          PsiElement(proper name)('Foo')
          PsiElement(whitespace)(' ')
        PsiElement(identifier)('a')
        PsiElement(whitespace)(' ')
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PureASTWrapperElement(TypeDeclaration)
          PsiElement(identifier)('foo')
          PsiElement(whitespace)(' ')
          PsiElement(::)('::')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Type)
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(TypeVar)
                PsiElement(identifier)('a')
                PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Type)
              PureASTWrapperElement(TypeAtom)
                PsiElement(proper name)('String')
                PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeSynonymDeclaration)
        PsiElement(type)('type')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Bar')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Type)
          PureASTWrapperElement(TypeAtom)
            PsiElement(proper name)('String')
            PsiElement(whitespace)('\n\n')
      PsiElement(instance)('instance')
      PsiElement(whitespace)(' ')
      PsiErrorElement:Expecting identifier
        PsiElement(proper name)('Foo')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Bar')
        PsiElement(whitespace)(' ')
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PsiElement(identifier)('foo')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('s')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('s')
        PsiElement(whitespace)('\n')
